--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- this is the demo project and I want to use it as a base to complete it . thank you and see you tommorrow. that will be all for now -->
 <!DOCTYPE html>
 <html>
 
